add Camera permission

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mary.kotlinprojectstudy">
 
+    <uses-feature android:name="android.hardware.camera.any" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinProjectStudy">
-        <activity android:name=".showdetail.ColorDetailActivity"></activity>
+        <activity android:name=".camera.CameraActivity"></activity>
+        <activity android:name=".showdetail.ColorDetailActivity" />
         <activity android:name=".writing.WritingColorActivity" />
         <activity
             android:name=".main.MainActivity"
