--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,17 @@ dependencies {
         implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     }
 
+    //cameraX
+    // CameraX core library using the camera2 implementation
+    def camerax_version = "1.0.0-rc02"
+    // The following line is optional, as the core library is included indirectly by camera-camera2
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    // If you want to additionally use the CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha21"
+    // If you want to additionally use the CameraX Extensions library
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha21"
+
 }
