--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     //Color Picker
     implementation 'com.larswerkman:HoloColorPicker:1.5'
 
+    //palette api
+    implementation 'androidx.palette:palette:1.0.0'
+
     //Google
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
     implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
